# SimpleChat_App

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SimpleChat_App.sln
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
Client/include/: Client.h
Client/src/: Client.h  client.cpp  main.cpp
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  users.txt
Server/include/: Log.h  Server.h  User.h  UserManager.h
Server/src/: Log.cpp  User.cpp  UserManager.cpp  main.cpp  server.cpp
Server/tests/: CMakeLists.txt  ServerTest.cpp  UserManagerTest.cpp  UserTest.cpp
